Introduced jsonwebtoken for authentication...not finished yet

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGO_CONNECTION = "mongodb+srv://shahin:gossaigaononline%4012345@cluster0.zlyuxoa.mongodb.net/Todo-app?retryWrites=true&w=majority"
-
+jwt_key = "TodoJwtkey"
 PORT = 5000
